Some grammatical fixes and spacing

--- a/css/basic.css
+++ b/css/basic.css
@@ -156,6 +156,7 @@ nav {
     border: 1px solid #eee;
     border-radius: 2px;
     padding: 3rem;
+    margin-bottom: 1.2rem;
 }
 
 .package ul {
